fixed header, align button with search

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -39,8 +39,13 @@
 	border-radius: 0 0 3px 3px;
 	box-shadow: $default-box-shadow;
     padding: 40px 15px 20px;
-    background: #025160;
+    background: #04859d;
     margin-bottom: 15px;
+
+    h1 {
+      font-size: 45px;
+      padding-bottom: 45px;
+    }
 
     h1, h2, h3 {
     	color: white;
@@ -48,12 +53,23 @@
 
     .form-control {
     	color: white;
-    	background-color: #013F4A;
-    	border: 1px solid #00282F;
+    	background-color: #03677A;
+    	border: 1px solid #025160;
 
     	&:focus {
-    		border-color: #00282F;
+    		border-color: #025160;
     		box-shadow: inherit;
     	}
+    }
+
+    .input-group {
+      input[type="text"] {
+        font-size: 20px;
+        height: 42px;
+      }
+
+      button {
+        font-size: 20px;
+      }
     }
 }
